--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<p>&emsp; Current Computer Science student most specialized in C/C++, Java and MySQL.<br>
 			&emsp; Passionate about teamwork and high level design, diligence for technology news.</p>
 			<div class="download-button">
-				<a href="Personal_CV(2).pdf" download="Personal_CV(2)"><button type="button">Download CV</button></a>
+				<a href="Personal_CV.pdf" download="Personal_CV"><button type="button">Download CV</button></a>
 			</div>
 		</div>
 
@@ -111,39 +111,44 @@
 		</div>
 		
 		<div class="box-container">
-		<!--1------------->
+			<!--0------------->
 			<div class="box-1">
 				<span>1</span>
+				<p class="heading">MoveApp</p>
+				<p class="details">MoveApp is an iOS mobile application developed during summer internship at Tapptitude. This app was performed to
+				achieve citiziens travel needs within a crowded city. Using this app people can find out where an available scooter is and which can
+				be rented for a ride.</p>
+				<div class="read-more1">
+					<a href="https://github.com/Ccosmin23/MoveApp"><button>Read More</button></a>
+				</div>
+
+			</div>
+		<!--1------------->
+			<div class="box-2">
+				<span>2</span>
 				<p class="heading">House rental management</p>
 				<p class="details">Desktop application that is designed to meet every aspect of the customers, commercial and residential properties
 				feautures for the sale and rent properties and to simplify work for the rental managers.</p>
-				<div class="read-more1">
+				<div class="read-more2">
 					<a href="https://github.com/Ccosmin23/House-Rental-Management"><button>Read More</button></a>
 				</div>
 
 			</div>
 	   <!--2------------->
-			<div class="box-2">
-				<span>2</span>
+			<div class="box-3">
+				<span>3</span>
 				<p class="heading">Romanian medieval village</p>
 				<p class="details">Desktop application that simulate a real world village hidden in a hill depression. The scene were built in Blender and also all the objects and textures were mapped within.</p>
-				<div class="read-more2">
+				<div class="read-more3">
 					<a href="https://github.com/Ccosmin23/Romanian-Medieval-Village"><button>Read More</button></a>
 				</div>
 
 			</div>
 		<!--3------------->
-			<div class="box-3">
-				<span>3</span>
-				<p class="heading">Duckling robot</p>
-				<p class="details">The built robot is dancing on different type of music moving its head and legs on the proper rhythm, this depends by the sensors that are stimulated. The robot use sensors, leds, servomotors and mechanical motors</p>
-				<div class="read-more3">
-					<a href="https://www.facebook.com/permalink.php?story_fbid=1668380183460162&id=100008645886317"><button>Read More</button></a>
-				</div>
-			</div>
+			
 		<!--4------------->
 			<div class="box-4">
-				<span>4</span>
+				<span>5</span>
 				<p class="heading">Car dashboard</p>
 				<p class="details">The built arduino car dashboard simulate mostly a real one. All the information are shown on LCD, like: distance in front
 				and back side of car, ambiental temperature, hour, open/close doors.</p>
@@ -161,6 +166,12 @@
 	<div class="technical-skills">
 		<div class="skills-text">
 			<p>Technical skills</p>
+			<p>Swift</p>
+			<span class="dot37"></span>
+			<span class="dot38"></span>
+			<span class="dot39"></span>
+			<span class="dot40"></span>
+			<span class="dot41"></span>
 			<p> C/C++</p>
 			<span class="dot2"></span>
 			<span class="dot3"></span>
@@ -197,18 +208,12 @@
 			<span class="dot29"></span>
 			<span class="dot30"></span>
 			<span class="dot31"></span>
-			<p> Python</p>
+			<p> ML/Haskell</p>
 			<span class="dot32"></span>
 			<span class="dot33"></span>
 			<span class="dot34"></span>
 			<span class="dot35"></span>
 			<span class="dot36"></span>
-			<p> ML/Haskell</p>
-			<span class="dot37"></span>
-			<span class="dot38"></span>
-			<span class="dot39"></span>
-			<span class="dot40"></span>
-			<span class="dot41"></span>
 
 		</div>
 	
@@ -226,7 +231,7 @@
 			<span class="dot54"></span>
 			<span class="dot55"></span>
 			<span class="dot56"></span>
-			<p> Clion</p>
+			<p> Postman</p>
 			<span class="dot57"></span>
 			<span class="dot58"></span>
 			<span class="dot59"></span>
@@ -244,7 +249,7 @@
 			<span class="dot69"></span>
 			<span class="dot70"></span>
 			<span class="dot71"></span>
-			<p> Windows/Linux</p>
+			<p> Win/Linux/Mac</p>
 			<span class="dot72"></span>
 			<span class="dot73"></span>
 			<span class="dot74"></span>
